--- a/question.html
+++ b/question.html
@@ -32,7 +32,7 @@
     <div class="space">
         <div class="container" >
                 <!--Student login button-->
-                <img class="logo" src="css/icon1.png">
+                <a href="/index.html"><img class="logo" src="css/icon1.png" ></a>
                 <img class="loginIcon" src="css/stu.png">
                 <!--Professor login button-->
                 <img class="loginIcon" src="css/prof.png">
@@ -220,7 +220,7 @@
             </div><!-- POST -->
 
             <span class="input-group-btn">
-                <button class="btn btn-default" type="button" style="opacity:0">Ask</button>
+                <button class="btn btn-default" type="button" style="opacity:0"></button>
             </span>
         </div>
 
@@ -232,7 +232,7 @@
 
         <div class="list-group" id="todo-list">
 
-            <span class="listgroup-item" ng-repeat="todo in todos | filter:input | questionFilter:maxQuestion"
+            <span class="listgroup-item" ng-repeat="todo in todos | questionFilter:maxQuestion"
                   ng-class="{completed: todo.completed, editing: todo == editedTodo}">
 
                 <div class="post list-group-item-heading" ng-switch on="todo.headLastChar">
