--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body ng-controller="controller">
 		<!-- fb start -->
 		<!-- tutorial: https://developers.facebook.com/docs/facebook-login/web -->
-		<script>
+		<!-- <script>
 			window.fbAsyncInit = function() {
 				FB.init({
 					appId      : '927165754029948',
@@ -34,8 +34,8 @@
 			data-share="true"
 			data-width="450"
 			data-show-faces="true">
-		</div>
-		<script>
+		</div> -->
+		<!-- <script>
 		// This is called with the results from from FB.getLoginStatus().
 		function statusChangeCallback(response) {
 			console.log('statusChangeCallback');
@@ -114,7 +114,7 @@
 				'Thanks for logging in, ' + response.name + '!';
 			});
 		}
-		</script>
+		</script> -->
 
 		<!--
 		Below we include the Login Button social plugin. This button uses
@@ -122,8 +122,14 @@
 		the FB.login() function when clicked.
 		-->
 
-		<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-		</fb:login-button>
+		<!-- <a href="api/login/facebook">Login facebook</a> -->
+		<div class="container">
+		    <div class="jumbotron text-center">
+		        <h1><span class="fa fa-lock"></span> Node Authentication</h1>
+		        <p>Login or Register with:</p>
+		        <a href="/api/login/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a>
+		    </div>
+		</div>
 
 		<div id="status">
 		</div>
