--- a/question.html
+++ b/question.html
@@ -277,7 +277,7 @@
                                   ng-click="addEcho(todo)" ng-disabled="$storage[todo._id]"></span>
                             <span class="col-md-2 label label-warning"> {{todo.echo}} </span>
                             <span class="col-md-5 glyphicon glyphicon-thumbs-down votedown"
-                                  ng-click="subtractEcho(todo)" ng-disabled="$storage[todo._id]"></span>
+                                  ng-click="minusEcho(todo)" ng-disabled="$storage[todo._id]"></span>
                         </div>
 
                         <div class="time"><span class="glyphicon glyphicon-time"></span>
