--- a/question.html
+++ b/question.html
@@ -15,18 +15,14 @@
     <title>Question Room</title>
 
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.css">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href="css/custom.css" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
-
-    <link rel="stylesheet" type="text/css" href="style1.css" media="screen" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="css/icon1.png" />
-    <link rel="stylesheet" href="css/font.css">
-
+ 
+    <link rel="stylesheet" href="css/filter.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
-    <script src="src/js/angular-socialshare.js"></script>
 
 </head>
 <body ng-controller="TodoCtrl" style="background-color: #e8e8e8">
@@ -39,10 +35,10 @@
                 <img class="loginIcon" src="css/prof.png">
         </div>
     </div>
-    <div class="col-lg-4 col-md-4">
+    <div class="col-lg-3 col-md-3">
         <div class="sidebarblock">
             <h3>Poll of the Week</h3>
-
+            <div class="divline"></div>
             <div class="blocktxt">
                 <p>Polling question</p>
                 <form action="#" method="post" class="form">
@@ -90,22 +86,11 @@
                 </ul>
             </div>
         </div>
-       <div class="sidebarblock">
-            <h3>Other classrooms</h3>
-            <div class="divline"></div>
-            <div class="blocktxt">
-                <ul class="cats">
-                    <li><a href="#">COMP2011</a></li>
-                    <li><a href="#">COMP2012</a></li>
-                    <li><a href="#">COMP4331</a></li>
-                    <li><a href="#">COMP3021</a></li>
-                </ul>
-            </div>
-        </div>
+      
         <!-- -->
     </div>
 
-    <div class="col-lg-8 col-md-8">
+    <div class="col-lg-6 col-md-6">
         <!-- LEAVE SPACE FOR FUTURE SEARCH -->
         <!--
         <div class="searchQuestion">
@@ -129,6 +114,7 @@
 
 
         <!-- NEW DESIGN FOR POSTING QUESTIONS -->
+ 
 
         <div class="input-group">
             <!-- POST -->
@@ -293,7 +279,50 @@
             </span>
         </div>
     </div>
+    <div class="col-lg-3 col-md-3">
+   
+        <div class="sidebarblock">
+            <h3>Sort by</h3>
+            <div class="divline"></div>
+            <div class="btn-group" role="group">
+                <button type="button" class="btn btn-default">Likes</button>
+                <button type="button" class="btn btn-default">Times</button>
+            </div>
+        </div>
+        <div class="sidebarblock">
+            <h3>Filt by</h3>
+            <div class="divline"></div>
+            <div class="dropdown">
+            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            Dropdown
+            <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+            </ul>
+            </div>
+        </div>
+       <div class="sidebarblock">
+            <h3>Try more classrooms</h3>
+            <div class="divline"></div>
+            <div class="blocktxt">
+                <ul class="cats">
+                    <li><a href="#">COMP2011</a></li>
+                    <li><a href="#">COMP2012</a></li>
+                    <li><a href="#">COMP4331</a></li>
+                    <li><a href="#">COMP3021</a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- -->
+    </div>
 
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.7/angular.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.7/angular-sanitize.min.js"></script>
 
     <script src="js/lib/Autolinker.min.js"></script>
            <!-- SLIDER REVOLUTION 4.x SCRIPTS  -->
