--- a/question.html
+++ b/question.html
@@ -132,6 +132,7 @@
 
                             </div>
                         </div>
+
                         <div class="posttext pull-left">
                             <div class ="row questionBar">
                             <form action="#" method="post" class="form">
@@ -313,11 +314,12 @@
             <h3>Try more classrooms</h3>
             <div class="divline"></div>
             <div class="blocktxt">
-                <ul class="cats">
+                <ul class="cats"  ng-repeat="room in roomList">
                     <li><a href="#">COMP2011</a></li>
                     <li><a href="#">COMP2012</a></li>
                     <li><a href="#">COMP4331</a></li>
                     <li><a href="#">COMP3021</a></li>
+                    <li><a href="#">room.name</a></li>    
                 </ul>
             </div>
         </div>
@@ -327,7 +329,9 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.7/angular.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.7/angular-sanitize.min.js"></script>
-
+    <script type="text/javascript" src="js/config.js"></script>
+    <script type="text/javascript" src="js/emoji.min.js"></script>
+    <link type="text/stylesheet" rel="stylesheet" href="css/emoji.min.css" />
     <script src="js/lib/Autolinker.min.js"></script>
            <!-- SLIDER REVOLUTION 4.x SCRIPTS  -->
     <script type="text/javascript" src="js/jquery.themepunch.plugins.min.js"></script>
