--- a/question.html
+++ b/question.html
@@ -314,7 +314,7 @@
             <h3>Try more classrooms</h3>
             <div class="divline"></div>
             <div class="blocktxt">
-                <ul class="cats"  ng-repeat="room in roomList">
+                <ul class="cats">
                     <li><a href="#">COMP2011</a></li>
                     <li><a href="#">COMP2012</a></li>
                     <li><a href="#">COMP4331</a></li>
@@ -354,7 +354,7 @@
                 }); //ready
 
     </script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="webjs/bootstrap.min.js"></script>
     <!-- 2.2.2 -->
     <script src="js/lib/firebase.js"></script>
     <script src="js/lib/angular.min.js"></script>
@@ -366,8 +366,6 @@
     <script src="js/app.js"></script>
     <script src="js/filters/questionFilter.js"></script>
     <script src="js/controllers/todoCtrl.js"></script>
-    <script src="js/directives/todoFocus.js"></script>
-    <script src="js/directives/todoBlur.js"></script>
     <script src="js/directives/todoEscape.js"></script>
 </body>
 </html>
