--- a/question.html
+++ b/question.html
@@ -224,7 +224,7 @@
                   ng-class="{completed: todo.completed, editing: todo == editedTodo}">
 
                 <div class="post list-group-item-heading" ng-switch on="todo.headLastChar"
-                     ng-style = "myStyle = {opacity: myOpacity}">
+                     ng-style = "{'opacity': (1 + echo * 0.05 >= 0.1) ? 1 + echo * 0.05 : 0.1}">
                     <div class="wrap-ut pull-left">
                         <div class="userinfo pull-left">
                             <div class="avatar">
