--- a/question.html
+++ b/question.html
@@ -314,12 +314,8 @@
             <h3>Try more classrooms</h3>
             <div class="divline"></div>
             <div class="blocktxt">
-                <ul class="cats">
-                    <li><a href="#">COMP2011</a></li>
-                    <li><a href="#">COMP2012</a></li>
-                    <li><a href="#">COMP4331</a></li>
-                    <li><a href="#">COMP3021</a></li>
-                    <li><a href="#">room.name</a></li>
+                <ul class="cats" ng-repeat="room in roomList">
+                    <li><a ng-href="#{{room.name}}" ng-bind="room.name"></a></li>
                 </ul>
             </div>
         </div>
@@ -369,5 +365,12 @@
     <script src="js/app.js"></script>
     <script src="js/filters/questionFilter.js"></script>
     <script src="js/controllers/todoCtrl.js"></script>
+
+    <!-- CUSTOM CODE TO RELOAD UPON CHANGE OF ROOM -->
+    <script>
+        window.onhashchange = function() {
+            window.location.reload();
+        }
+    </script>
 </body>
 </html>
