--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<div class="jumbotron text-center">
 				<!-- <h1><span class="fa fa-lock"></span> Log</h1> -->
 				<p>Login or Register with:</p>
-				<a href="/api/login/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a>
+				<a href="/auth/login/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a>
 			</div>
 		</div>
 		<!-- <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
