add a button of save draft

--- a/question.html
+++ b/question.html
@@ -136,7 +136,7 @@
                         <div class="posttext pull-left">
                             <div class ="row questionBar">
                             <form action="#" method="post" class="form">
-                                    <textarea type="text" class="form-control" placeholder="Post for question"
+                                    <textarea type="text" class="form-control" placeholder="Post for a question"
                                            ng-model="input.wholeMsg" autofocus="autofocus">
                                     </textarea>
                                 <div class="clearfix"></div>
@@ -198,6 +198,12 @@
                             <div class="pull-left smile"><a href="#"><i class="fa fa-smile-o"></i></a></div>
                             <div class="pull-left"><button type="button" class="btn btn-primary"
                                     ng-click="addTodo()">Post</button></div>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="pull-right postreply">
+                            <div class="pull-left smile"><a href="#"><i class="fa fa-smile-o"></i></a></div>
+                            <div class="pull-left"><button type="button" class="btn btn-primary"
+                                    ng-click="addTodo()">Save Draft</button></div>
                             <div class="clearfix"></div>
                         </div>
 
@@ -319,6 +325,12 @@
                 </ul>
             </div>
         </div>
+        <div class="bottom">
+                <div class="container">
+                    <br/>
+                    <p>Copyright &copy Why Naming Again. All Rights Reserved</p>
+                </div>
+            </div>
         <!-- -->
     </div>
 
