--- a/index.html
+++ b/index.html
@@ -12,26 +12,22 @@
 	</head>
 
 	<body ng-controller="controller">
-		<!-- fb start -->
-		<div class="container">
-			<div class="jumbotron text-center">
-				<p>Login or Register with:</p>
-				<a href="/auth/login/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a>
-				<a href="/auth/logout/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Logout</a>
-			</div>
-		</div>
-		<!-- fb end -->
-
-		<div id="status">
-		</div>
-		<!-- fb end -->
 		<div class="space">
 			<div class="container">
 					<p id="quote" >"test" <br>--Norton Juster</p>
-					<!--Student login button-->
-					<img class="loginIcon" src="css/stu.png">
-					<!--Professor login button-->
-					<img class="loginIcon" src="css/prof.png">
+					<!-- fb start -->
+					<div class="container">
+					<div class="text-center">
+						<p>Login or Register with:</p>
+						<a href="/auth/login/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a>
+						<a href="/auth/logout/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Logout</a>
+					</div>
+					</div>
+					<!-- fb end -->
+
+					<div id="status">
+					</div>
+					<!-- fb end -->
 			</div>
 		</div>
 		<!--this div is the header and the icon-->
