Facebook login in Question page

--- a/question.html
+++ b/question.html
@@ -30,9 +30,19 @@
         <div class="container" >
                 <!--Student login button-->
                 <a href="/index.html"><img class="logo" src="css/icon1.png" ></a>
-                <img class="loginIcon" src="css/stu.png">
-                <!--Professor login button-->
-                <img class="loginIcon" src="css/prof.png">
+                <!-- fb start -->
+                    <div class="container">
+                    <div class="text-center">
+                        <p>Login or Register with:</p>
+                        <a href="/auth/login/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a>
+                        <a href="/auth/logout/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Logout</a>
+                    </div>
+                    </div>
+                    <!-- fb end -->
+
+                    <div id="status">
+                    </div>
+                    <!-- fb end -->
         </div>
     </div>
     <div class="col-lg-3 col-md-3">
