--- a/question.html
+++ b/question.html
@@ -78,14 +78,14 @@
             </div>
         </div>
         <div class="sidebarblock">
-            <h3>Categories</h3>
+            <h3>Hashtags</h3>
             <div class="divline"></div>
             <div class="blocktxt">
                 <ul class="cats">
-                    <li><a href="#">Instrutor's posts <span class="badge pull-right">20</span></a></li>
-                    <li><a href="#">TA's posts<span class="badge pull-right">10</span></a></li>
-                    <li><a href="#">Hot answers <span class="badge pull-right">50</span></a></li>
-                    <li><a href="#">Others<span class="badge pull-right">36</span></a></li>
+                    <li><a href="#">Midterm</li>
+                    <li><a href="#">Final</a></li>
+                    <li><a href="#">Assignment</a></li>
+                    <li><a href="#">Others</a></li>
                 </ul>
             </div>
         </div>
