--- a/question.html
+++ b/question.html
@@ -36,6 +36,7 @@
                         <p>Login or Register with:</p>
                         <a href="/auth/login/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a>
                         <a href="/auth/logout/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Logout</a>
+                        <div><button type="button" class="btn btn-primary" ng-click="returnFBusername()">test</button></div>
                     </div>
                     </div>
                     <!-- fb end -->
