--- a/homepage.html
+++ b/homepage.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
-<html  dropEffect="none" class="no-js">
+<html ng-app="homepage">
 <head>
-<meta charset="utf-8" />
+    <meta charset="utf-8">
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
 
 
 <title>Your Personal Homepage</title>
@@ -11,13 +19,18 @@
 <link rel="stylesheet" href="http://static.zhihu.com/static/revved/-/css/pages/profile/main.a4ee1916.css">
 <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
 <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
+   <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.css">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+
 
 </head>
 
-<body class="zhi">
+<body ng-controller="homepageManipulation" >
 <div class="page-wraper">
 <div class="username">
-	<h1 id="username">{{}}</h1>
+	<h1 id="username">{}</h1>
 	<a href="/auth/logout/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Logout</a>
 </div>
 <div class="nav">
@@ -109,7 +122,7 @@
 	</div>
 	<div class="achievementimg">
 		<img class="medal" id="medal" src="">
-		<p id="achievementWords" style="font-size:20px">No ahievement now! You have to work harder!</p>
+		<p id="achievementWord" style="font-size:20px">No ahievement now! You have to work harder!</p>
 	</div>
 </div>
 <!-- We have 20 JACK, 50 QUEEN, 100 KING-->
@@ -120,51 +133,48 @@
 
 </div>
 
-<script>
-/*FB.api('/me', function(response) {
-    alert("Name: "+ response.name + "\nFirst name: "+ response.first_name + "ID: "+response.id);
-    var img_link = "http://graph.facebook.com/"+response.id+"/picture"
-    var temp = document.getElementById("username");
-    temp.value = response.name;
-});*/
-
-</script>
-<!-- change the acheivement medal-->
-<script>
-	var likes = {{number of likes get}}
-	if(likes > 20 && likes <50)
-	{
-		document.getElementById("medal").src = "img/medal/20.png";
-		document.getElementById("achievementWords").innerHTML = "You recieve more than 20 likes!"
-	}
-	else if(likes>50 && likes<100)
-	{
-		document.getElementById("medal").src = "img/medal/50.png";
-		document.getElementById("achievementWords").innerHTML = "You recieve more than 50 likes!"
-	}
-	else if(likes>100)
-	{
-		document.getElementById("medal").src = "img/medal/100.png";
-		document.getElementById("achievementWords").innerHTML = "You recieve more than 100 likes!"
-	}
+	<!--the acheivement medal-->
+	<script>
+		//document.getElementById("achievementWord").innerHTML = "You recieve more than 20 likes!";
+		var likes = 30;
+		if(likes > 20 && likes <50)
+		{
+			document.getElementById("medal").src = "img/medal/20.png";
+			document.getElementById("achievementWord").innerHTML = "You recieve more than 20 likes!"
+			console.log(likes + " number is ")
+		}
+		else if(likes>50 && likes<100)
+		{
+			document.getElementById("medal").src = "img/medal/50.png";
+			document.getElementById("achievementWord").innerHTML = "You recieve more than 50 likes!"
+		}
+		else if(likes>100)
+		{
+			document.getElementById("medal").src = "img/medal/100.png";
+			document.getElementById("achievementWord").innerHTML = "You recieve more than 100 likes!"
+		}
 
 
-</script>
-   <!-- jQuery -->
+	</script>
+
+	<!-- angular-->
+
+    <!-- jQuery -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 
     <!-- angularJs -->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-sanitize.min.js"></script>
     <script src="js/lib/Autolinker.min.js"></script>
-    <!-- Bootstrap -->
+
+     <!-- Bootstrap -->
     <script src="webjs/bootstrap.min.js"></script>
 
     <!-- local scripts for our application -->
     <script src="js/lib/ngStorage.min.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/filters/questionFilter.js"></script>
-    <script src="js/controllers/todoCtrl.js"></script>
+    <script src="js/controllers/homepage.js"
+
 
 <input type="hidden" name="_xsrf" value="3d99b059b816aca9a5c5a74687857108"/>
 </body>
