--- a/question.html
+++ b/question.html
@@ -29,7 +29,7 @@
 
     <!-- VISUALIZATION PART BEGINS -->
     <div id="myModal1" class="modal fade" role="dialog">
-        <div class="modal-dialog modal-lg">
+        <div class="modal-dialog modal-lg" id ="interactionOuter">
             <!-- Modal content-->
             <div class="modal-content visModule">
                 <div class="modal-header">
@@ -53,9 +53,8 @@
                     <!-- Here goes the interaction view -->
                     <div class="panel panel-default">
                         <div class="panel-heading">Interaction View</div>
-                        <div class="panel-body">
+                        <div class="panel-body" >
                             <div class="col-md-12">
-                                <div class="chartLabel"></div>
                                 <div id="interactionView"></div>
                             </div>
                         </div>
@@ -418,6 +417,15 @@
     <script src="js/app.js"></script>
     <script src="js/filters/questionFilter.js"></script>
     <script src="js/controllers/todoCtrl.js"></script>
+
+    <!-- this part goes for vis -->
+    <script src="js/vis/data/network.js"></script>
+
+
+    <script src="js/lib/d3.js"></script>
+    <script src="js/vis/main_vis.js"></script>
+    <script src="js/vis/graph.js"></script>
+
 
     <!-- CUSTOM CODE TO RELOAD UPON CHANGE OF ROOM -->
     <script>
